# robocup-swinder

Arduino/swinder_v1.0/: platformio.ini
Arduino/swinder_v1.0/lib/Solonoid/: Solenoid.cpp  Solenoid.hpp
Arduino/swinder_v1.0/src/: main.cpp
KiCad/RobocupSwinderPCB/: RobocupSwinderPCB.kicad_prl  RobocupSwinderPCB.kicad_pro  RobocupSwinderPCB.kicad_sch
Rust/swinder_v0.6/: Cargo.toml
Rust/swinder_v0.6/src/: lib.rs  main.rs  peripherals.rs
